Make the project depend on the IP BOM and change its version number to 0.1.0-SNAPSHOT